--- a/streams/rtmp/package.json
+++ b/streams/rtmp/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "api",
+  "name": "rtmp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server -p 3001 -w db.json"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0",
-    "package.json": "^2.0.1"
+    "node-media-server": "^2.3.8"
   }
 }
